# wmx

./: .hgtags  ANNOYING-BUGS  Border.C  Border.h  Buttons.C  Channel.C  Client.C  Client.h  Config.C  Config.h  Events.C  General.h  MULTIHEAD  Main.C  Makefile  Makefile.in  Manager.C  Manager.h  Menu.C  Menu.h  README  README.contrib  README.jamie-gnome  Rotated.C  Rotated.h  Session.C  TODO.netwm  UPDATES  background.xpm  configure  configure.in  jamie-patch.diff  listmacro.h  listmacro2.h  wmx.desktop
rsharman-patch/: Patch.rs1  Patch.rs1.nfo  README.keybindings  README.menu  README.remote  examples.tgz
